src/app/components/Header/Header.module.scss
@use "../../styles/base/mixins" as *;

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 5%;
  background-color: transparent;
  color: #fff;
  font-size: 1rem;
  font-weight: 800;
  text-transform: uppercase;
  letter-spacing: 0.1rem;

  position: relative;
  display: flex;
  gap: 4rem;

  @include respond-between("tablet", "laptop") {
    font-size: 0.5rem;
    padding: 1rem 2%;
  }
  @include respond-between("laptop", "desktop-lg") {
    font-size: 0.8rem;
    padding: 2rem 2%;
  }

  .nav__links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 2 1 auto;
    overflow: auto;

    @include respond-between("tablet", "laptop") {
      flex: 2 1 40%;
    }

    /* dropdown */

    .dropdown {
      position: relative;
      display: inline-block;

      a {
        display: flex;
        align-items: center;
        gap: 5px;
      }
    }

    .dropdownMenu {
      text-transform: none;
      font-weight: 500;
      display: none;
      position: absolute;
      top: 100%;
      left: -5%;
      background: #11151a;
      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
      padding: 15px 0;
      min-width: 300px;
      z-index: 10;
      border-radius: 20px;
      -webkit-border-radius: 20px;
      -moz-border-radius: 20px;
      -ms-border-radius: 20px;
      -o-border-radius: 20px;

      @include respond-to-max("laptop") {
        font-weight: 300;
      }

      li {
        list-style: none;
        padding: 8px 26px;

        @include respond-to-max("laptop") {
          padding: 0 26px;
        }

        a {
          text-decoration: none;
          color: #fff;
          display: block;
          width: 100%;
        }

        &:hover {
          background-color: #42464f;
        }
      }
    }

    /* .dropdown:hover .dropdownMenu {
      display: block;
    } */

    @media (min-width: 1025px) {
      .dropdown:hover .dropdownMenu {
        display: block;
      }
    }

    /* FIN dropdown */
  }

  .contactoMobile {
    display: none;

    @include respond-to-max("laptop") {
      display: block;
      padding: 10px 0;
      border-bottom: 1px solid #2b2e36;
    }
  }

  .contactoDesktop {
    @include respond-to-max("laptop") {
      display: none;
    }
  }

  .header__right {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex: 1 1 auto;

    @include respond-between("tablet", "laptop") {
      flex: 2 1 50%;
    }
  }

  a {
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      height: 3rem;
    }

    .arrow__icon {
      margin-left: 15px;
    }

    .search__icon {
      font-size: 1.5rem;
      color: #fff;
    }
  }

  a.logo__container {
    display: flex;
    justify-content: center;
    margin: 0 2rem;

    @include respond-between("laptop", "desktop-lg") {
      margin: 0 0.5rem;
    }

    .logo {
      height: 4rem;
    }
  }

  .phone__btn {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    padding: 0.5rem 2rem;
    background-color: transparent;
    cursor: pointer;
    color: #fff;
    border: 3px solid #ae00ff;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    border-radius: 2rem;
    -webkit-border-radius: 2rem;
    -moz-border-radius: 2rem;
    -ms-border-radius: 2rem;
    -o-border-radius: 2rem;

    .phone__icon {
      color: #ae00ff;
      font-size: 1.2rem;
    }
  }
}

@include respond-to-max("laptop") {
  .header {
    font-size: 0.5rem;
    gap: 6vw;
    height: 70px;

    padding: 5px 5vw;
    .nav__links {
      display: none;
    }
    a.logo__container {
      margin: 0px;
      .logo {
        width: 137px;
        height: auto;
      }
    }
    a.phone__btn {
      padding: 5px 12px;
      width: max-content;
      border: 1px solid rgb(174, 0, 255);
      font-size: 10px;

      .phone__icon {
        font-size: 0.8rem;
      }
    }
    .header__right {
      gap: 10px;
      justify-content: flex-end;
      max-width: 350px;
      a:first-child {
        display: none;
      }
    }

    a {
      .search__icon {
        display: none;
        /* color: #fff;
        font-size: clamp(2px, 4vw, 30px); */
      }
    }

    /* menu  */

    .menu__icon {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: center;
      width: 30px;
      height: 10px;
      cursor: pointer;

      span {
        display: block;
        height: 2px;
        width: 100%;
        background: #fff;
        transition: all 0.3s ease;
      }
    }

    .menu__icon.open span:first-child {
      width: 22px;
      transform: rotate(45deg) translate(4px, 2px);
      -webkit-transform: rotate(45deg) translate(4px, 2px);
      -moz-transform: rotate(45deg) translate(4px, 2px);
      -ms-transform: rotate(45deg) translate(4px, 2px);
      -o-transform: rotate(45deg) translate(4px, 2px);
    }

    .menu__icon.open span:last-child {
      width: 22px;
      transform: rotate(-45deg) translate(4px, -2px);
      -webkit-transform: rotate(-45deg) translate(4px, -2px);
      -moz-transform: rotate(-45deg) translate(4px, -2px);
      -ms-transform: rotate(-45deg) translate(4px, -2px);
      -o-transform: rotate(-45deg) translate(4px, -2px);
    }

    .nav__links {
      z-index: 1000;
      display: none;
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
      position: fixed;
      height: calc(100dvh - 70px);
      top: 70px;
      left: 0;
      width: 100%;
      background: #11151a;
      padding: 0 20px;
      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);

      color: #fff;
      font-weight: 500;
      text-transform: none;
      font-size: 1rem;

      .dropdown {
        width: 100%;
      }
      .dropdownMenu.show {
        display: block;
        position: static;
        box-shadow: none;
        background: none;
        padding: 0;
      }

      a {
        justify-content: flex-start;
        padding: 12px 0;
        border-bottom: #2b2e36 solid 1px;
        width: 100%;

        .arrow__icon {
          margin-left: auto;
        }
      }
    }

    .showMenu {
      display: flex;
    }
  }
}

@include respond-to-max("mobile-md") {
  .header {
    font-size: 0.5rem;
    padding: 0 3vw;
    gap: 0;
  }
}

